# iconv-wrap

./: CMakeLists.txt  README.md  iconv.cpp  iconv.h  libiconv.pc.cmakein
